# je

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  codecov.yml
.github/workflows/: cd.yml  ci.yml  main.yml  rc.yml  release.yml
src/: args.rs  cfg.rs  cfgmgr.rs  cmd.rs  fsops.rs  http.rs  main.rs  opt.rs  path.rs  pkg.rs  pkgdir.rs  pkgmgr.rs  testutils.rs
tests/: e2e.rs
