# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "je"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
description = "Allows to upload and download content to and from AEM instance"
keywords = ["AEM", "content"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/devzbysiu/je"
homepage = "https://github.com/devzbysiu/je"
documentation = "https://docs.rs/je"
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
structopt = "0.3.15"
anyhow = "1.0.32"
tempfile = "3.1.0"
zip = "0.5.6"
reqwest = { version = "0.10.7", features = [ "blocking" ] }
base64 = "0.12.3"
walkdir = "2.3.1"
toml = "0.5.6"
serde = "1.0.114"
serde_derive = "1.0.114"
fs_extra = "1.1.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
