[package]
name = "je"
version = "0.3.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"
description = "Allows to upload and download content to and from AEM instance"
repository = "https://github.com/devzbysiu/je"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["AEM", "content"]
categories = ["command-line-utilities"]
homepage = "https://github.com/devzbysiu/je"
documentation = "https://docs.rs/je"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
structopt = "0.3.15"
anyhow = "1.0.32"
tempfile = "3.1.0"
zip = "0.5.6"
reqwest = { version = "0.11.3", features = [ "blocking", "multipart" ] }
base64 = "0.13.0"
walkdir = "2.3.1"
toml = "0.5.6"
serde = "1.0.114"
serde_derive = "1.0.114"
fs_extra = "1.2.0"
getset = "0.1.1"
bytes = "1.0.1"
regex = "1.5.3"
path-slash = "0.1.4"

[dev-dependencies]
assert_cmd = "2.0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
tokio = "1.6.0"
setup_fs = { git = "https://github.com/devzbysiu/setup_fs", rev = "036b2c8" }
maplit = "1.0.2"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true

